--- a/задание 2.1
+++ b/задание 2.1
@@ -1,13 +1,8 @@
-program paromova;
-var
-    num, sum, i: Integer;
-begin
-    sum := 0;
-    Write('Введите целое число для суммирования всех чисел от 1 до него: ');
-    ReadLn(num);
-    for i := 1 to num do
-    begin
-        sum := sum + i; 
-    end;
-    WriteLn('Сумма чисел от 1 до ', num, ' равна ', sum);
-end.
+С#
+using System;
+
+static void Add()
+    {
+        var i = 2 +3;
+    }
+
