--- a/задание 2.2
+++ b/задание 2.2
@@ -1,10 +1,19 @@
-С#
 using System;
 
-static void Add()
+class Program
+{
+    static void Main()
     {
-        var i = 2 +3;
+        Add();
     }
+
+    static void Add()
+    {
+        var i = 2 + 3;
+        Console.WriteLine($"Результат сложения: {i}");
+    }
+}
+
 
 IL
          IL_0000: nop
