--- a/задание 2.1
+++ b/задание 2.1
@@ -1,8 +1,15 @@
-С#
 using System;
 
-static void Add()
+class Program
+{
+    static void Main()
     {
-        var i = 2 +3;
+        Add();
     }
 
+    static void Add()
+    {
+        var i = 2 + 3;
+        Console.WriteLine($"Результат сложения: {i}");
+    }
+}
